Build: align Vite outDir with Pages workflow (dist); fix index.html script path for Pages

--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Vite will rewrite this during build; in dev, the absolute path works via dev server -->
+    <script type="module" src="/Personal-Website/src/main.jsx"></script>
   </body>
 </html>
