Fix: let Vite inject correct entry (revert script to /src/main.jsx); keep base=/Personal-Website

--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Vite will rewrite this during build; in dev, the absolute path works via dev server -->
-    <script type="module" src="/Personal-Website/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
